lefthand bar beginnings

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div class="parent">
+    <div class="left-bar">
+        <img class="w-logo" src="/assets/w-logo.png"/>
+    </div>
+    <div class="main-right">
+
+    </div>
+</div>
