--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,17 @@
 <div class="parent">
     <div class="left-bar">
-        <img class="w-logo" src="/assets/w-logo.png"/>
+        <a class="link" [routerLink]="['/']">
+            <img class="w-logo" src="/assets/w-logo.png"/>
+        </a>
+        <img class="social-icon" src="/assets/github.png"/>
+        <img class="social-icon" src="/assets/linkedin.png"/>
+        <img class="social-icon" src="/assets/vimeo.png"/>
+        <img class="social-icon" src="/assets/tiktok.png"/>
+        <img class="social-icon" src="/assets/twitter.png"/>
     </div>
     <div class="main-right">
+        <div class="section-one">
 
+        </div>
     </div>
 </div>
