Add main section buttons

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,15 +3,38 @@
         <a class="link" [routerLink]="['/']">
             <img class="w-logo" src="/assets/w-logo.png"/>
         </a>
-        <img class="social-icon" src="/assets/github.png"/>
-        <img class="social-icon" src="/assets/linkedin.png"/>
-        <img class="social-icon" src="/assets/vimeo.png"/>
-        <img class="social-icon" src="/assets/tiktok.png"/>
-        <img class="social-icon" src="/assets/twitter.png"/>
+        <a class="link" href="https://github.com/willhoppin" target="_blank">
+            <img class="social-icon" src="/assets/github.png"/>
+        </a>
+        <a class="link" href="https://www.linkedin.com/in/will-hoppin/" target="_blank">
+            <img class="social-icon" src="/assets/linkedin.png"/>
+        </a>
+        <a class="link" href="https://vimeo.com/willhoppin" target="_blank">
+            <img class="social-icon" src="/assets/vimeo.png"/>
+        </a>
+        <a class="link" href="https://www.tiktok.com/@willyhopps?lang=en" target="_blank">
+            <img class="social-icon" src="/assets/tiktok.png"/>
+        </a>
+        <a class="link" href="https://twitter.com/willyhopps?lang=en" target="_blank">
+            <img class="social-icon" src="/assets/twitter.png"/>
+        </a>
     </div>
     <div class="main-right">
         <div class="section-one">
-
+            <div class="main-text-wrap">
+                <div class="main-title">Will Hoppin</div>
+                <div class="main-description">Hi I'm Will! I love working at the intersection of entertainment and software, with dreams of working in renewable energy.</div>
+            </div>
+            <div class="buttons-wrapper">
+                <div class="intro-button">
+                    <div class="play"></div>
+                    Intro
+                </div>
+                <div class="about-wrapper">
+                    <div class="about-text">About</div>
+                    <div class="about-button"></div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
