--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,10 @@
 html, body {
     margin: 0;
+    font-family: Nunito Sans;
+    font-weight: 300;
+}
+
+@font-face {
+    font-family: "Benguiat";
+    src: local("Benguiat"), url(./assets/fonts/Benguiat-Bold.ttf) format("truetype");
 }
