--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -102,6 +102,7 @@
     align-items: center;
     transition: 0.2s ease-in-out;
     cursor: pointer;
+    z-index: 2;
 
     &:hover {
         opacity: 0.3;
@@ -112,7 +113,8 @@
     font-weight: bold;
     font-size: 22px;
     position: absolute;
-    z-index: 2;
+    padding-left: 40px;
+    padding-top: 10px;
 }
 
 .play {
