features section skeleton

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,7 +23,7 @@
         <div class="section-one">
             <div class="main-text-wrap">
                 <div class="main-title">Will Hoppin</div>
-                <div class="main-description">Hi I'm Will! I love working at the intersection of entertainment and software, with dreams of working in renewable energy.</div>
+                <div class="main-description">Hi I'm Will! I'm a dual degree student at Middlebury and Columbia. I love working at the intersection of entertainment and technology, and have dreams of working in renewable energy.</div>
             </div>
             <div class="buttons-wrapper">
                 <div class="intro-button">
@@ -34,6 +34,14 @@
                     <div class="about-text">About</div>
                     <div class="about-button"></div>
                 </div>
+            </div>
+            <div class="trending-text">Trending Now</div>
+            <div class="features-wrapper">
+                <app-feature></app-feature>
+                <app-feature></app-feature>
+                <app-feature></app-feature>
+                <app-feature></app-feature>
+                <app-feature></app-feature>
             </div>
         </div>
     </div>
