--- a/src/app/feature/feature.component.html
+++ b/src/app/feature/feature.component.html
@@ -1,3 +1,3 @@
-<div class="feature-wrap">
+<div class="feature-wrap" [ngStyle]="{ 'background' : 'url(' + image + ')', 'background-size' : 'cover', 'background-position' : 'center' }">
     <img class="w-logo" src="/assets/w-logo.png"/>
 </div>
