--- a/src/app/feature/feature.component.scss
+++ b/src/app/feature/feature.component.scss
@@ -1,12 +1,19 @@
 .feature-wrap {
     height: 220px;
     width: 160px;
-    background-color: blue;
     box-shadow: 0px 0px 10px rgba(17, 18, 21, 0.5);
-    margin-right: 12px;
+    margin-right: 10px;
+    transition: 0.2s ease-in-out;
+    margin-top: 5px;
+    cursor: pointer;
+
+    &:hover {
+        box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
+        margin-top: 0;
+    }
 }
 
 .w-logo {
-    width: 40px;
-    margin: 10px;
+    width: 25px;
+    margin: 8px;
 }
