--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,15 +23,15 @@
         <div class="section-one">
             <div class="main-text-wrap">
                 <div class="main-title">Will Hoppin</div>
-                <div class="main-description">Hi I'm Will! I'm a dual degree student at Middlebury and Columbia. I love working at the intersection of entertainment and technology, and have dreams of working in renewable energy.</div>
+                <div class="main-description">Hi I'm Will! I'm a dual degree student at Middlebury and Columbia. I love working at the intersection of entertainment and technology and have dreams of working in renewable energy.</div>
             </div>
             <div class="buttons-wrapper">
                 <div class="intro-button">
                     <div class="play"></div>
-                    Intro
+                    Play
                 </div>
                 <div class="about-wrapper">
-                    <div class="about-text">About</div>
+                    <div class="about-text">More Info</div>
                     <div class="about-button"></div>
                 </div>
             </div>
