--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -9,6 +9,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: sticky;
+    top: 35px;
+    align-self: flex-start;
 }
 
 .w-logo {
@@ -43,8 +46,8 @@
         rgba(17, 18, 21, 0),
         rgba(17, 18, 21, 1)
     ),
-    url('/assets/tranquility.jpg');
-    background-size: 100%;
+    url('/assets/cover.jpg');
+    background-size: cover;
     background-repeat: no-repeat;
     color: white;
 }
@@ -73,7 +76,7 @@
 
 .intro-button {
     display: flex;
-    padding: 10px 12px 10px 30px;
+    padding: 10px 10px 10px 32px;
     background: white;
     border-radius: 6px;
     width: 100px;
@@ -116,7 +119,7 @@
     font-weight: 500;
     font-size: 20px;
     position: absolute;
-    padding-left: 42px;
+    padding-left: 29px;
     padding-top: 10px;
 }
 
