add new feature assets
also, new gradient on home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,26 +4,32 @@
             <img class="w-logo" src="/assets/w-logo.png"/>
         </a>
         <a class="link" href="https://github.com/willhoppin" target="_blank">
-            <img class="social-icon" src="/assets/github.png"/>
+            <img class="social-icon" src="/assets/socials/github.png"/>
         </a>
         <a class="link" href="https://www.linkedin.com/in/will-hoppin/" target="_blank">
-            <img class="social-icon" src="/assets/linkedin.png"/>
+            <img class="social-icon" src="/assets/socials/linkedin.png"/>
         </a>
         <a class="link" href="https://vimeo.com/willhoppin" target="_blank">
-            <img class="social-icon" src="/assets/vimeo.png"/>
+            <img class="social-icon" src="/assets/socials/vimeo.png"/>
         </a>
         <a class="link" href="https://www.tiktok.com/@willyhopps?lang=en" target="_blank">
-            <img class="social-icon" src="/assets/tiktok.png"/>
+            <img class="social-icon" src="/assets/socials/tiktok.png"/>
         </a>
         <a class="link" href="https://twitter.com/willyhopps?lang=en" target="_blank">
-            <img class="social-icon" src="/assets/twitter.png"/>
+            <img class="social-icon" src="/assets/socials/twitter.png"/>
+        </a>
+        <a class="link" href="https://instagram.com/willyhoppsfans?utm_medium=copy_link" target="_blank">
+            <img class="social-icon" src="/assets/socials/instagram.png"/>
+        </a>
+        <a class="link" href="mailto:whoppin@middlebury.edu">
+            <img class="social-icon" src="/assets/socials/email.png"/>
         </a>
     </div>
     <div class="main-right">
         <div class="section-one">
             <div class="main-text-wrap">
                 <div class="main-title">Will Hoppin</div>
-                <div class="main-description">Hi I'm Will! I'm a dual degree student at Middlebury and Columbia. I love working at the intersection of entertainment and technology and have dreams of working in renewable energy.</div>
+                <div class="main-description">In this adorkable "rags to rags" story, a clueless junior at Middlebury College (on the dual degree track with Columbia University Engineering) does everything he can to secure jobs and internships with his B.A. in film and B.S. in computer science. Little does he know, he's going to end up in his parents' basement after graduation...</div>
             </div>
             <div class="buttons-wrapper">
                 <div class="intro-button">
@@ -35,13 +41,38 @@
                     <div class="about-button"></div>
                 </div>
             </div>
-            <div class="trending-text">Trending Now</div>
+        </div>
+        <div class="bottom-gradient"></div>
+        <div class="section-two">
+            <div class="trending-text">Coding</div>
             <div class="features-wrapper">
-                <app-feature></app-feature>
-                <app-feature></app-feature>
-                <app-feature></app-feature>
-                <app-feature></app-feature>
-                <app-feature></app-feature>
+                <div *ngFor="let feature of coding">
+                    <app-feature [image]="feature.image"></app-feature>
+                </div>
+            </div>
+        </div>
+        <div class="section-x">
+            <div class="trending-text">Films</div>
+            <div class="features-wrapper">
+                <div *ngFor="let feature of coding">
+                    <app-feature [image]="feature.image"></app-feature>
+                </div>
+            </div>
+        </div>
+        <div class="section-x">
+            <div class="trending-text">Design</div>
+            <div class="features-wrapper">
+                <div *ngFor="let feature of coding">
+                    <app-feature [image]="feature.image"></app-feature>
+                </div>
+            </div>
+        </div>
+        <div class="section-x">
+            <div class="trending-text">Photos</div>
+            <div class="features-wrapper">
+                <div *ngFor="let feature of coding">
+                    <app-feature [image]="feature.image"></app-feature>
+                </div>
             </div>
         </div>
     </div>
