--- a/src/app/feature/feature.component.scss
+++ b/src/app/feature/feature.component.scss
@@ -8,8 +8,9 @@
     cursor: pointer;
 
     &:hover {
-        box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
+        box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.25);
         margin-top: 0;
+        margin-bottom: 5px;
     }
 }
 
