implement pages at depth 2

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -47,7 +47,7 @@
             <div class="trending-text">Coding</div>
             <div class="features-wrapper">
                 <div *ngFor="let feature of coding">
-                    <app-feature [image]="feature.image"></app-feature>
+                    <app-feature [image]="feature.image" [link]="feature.link"></app-feature>
                 </div>
             </div>
         </div>
@@ -55,7 +55,7 @@
             <div class="trending-text">Films</div>
             <div class="features-wrapper">
                 <div *ngFor="let feature of coding">
-                    <app-feature [image]="feature.image"></app-feature>
+                    <app-feature [image]="feature.image" [link]="feature.link"></app-feature>
                 </div>
             </div>
         </div>
@@ -63,7 +63,7 @@
             <div class="trending-text">Design</div>
             <div class="features-wrapper">
                 <div *ngFor="let feature of coding">
-                    <app-feature [image]="feature.image"></app-feature>
+                    <app-feature [image]="feature.image" [link]="feature.link"></app-feature>
                 </div>
             </div>
         </div>
@@ -71,7 +71,7 @@
             <div class="trending-text">Photos</div>
             <div class="features-wrapper">
                 <div *ngFor="let feature of coding">
-                    <app-feature [image]="feature.image"></app-feature>
+                    <app-feature [image]="feature.image" [link]="feature.link"></app-feature>
                 </div>
             </div>
         </div>
