--- a/src/app/feature-pages/coding/cheese/cheese.component.html
+++ b/src/app/feature-pages/coding/cheese/cheese.component.html
@@ -1,3 +1,15 @@
 <div class="parent">
     <app-nav></app-nav>
+    <div class="main-right">
+        <div class="section-one">
+            <div class="main-text-wrap">
+                <div class="w-series">
+                    <img class="willflix-logo" src="/assets/willflix.png"/>
+                    <div class="series">SERIES</div>
+                </div>
+                <div class="series-title">Cheese App</div>
+            </div>
+        </div>
+        <div class="bottom-gradient"></div>
+    </div>
 </div>
