--- a/src/app/feature-pages/coding/cheese/cheese.component.scss
+++ b/src/app/feature-pages/coding/cheese/cheese.component.scss
@@ -3,3 +3,56 @@
     background: rgb(17, 18, 21);
     min-height: 100vh;
 }
+
+.main-right {
+    width: 100%;
+}
+
+.section-one {
+    padding: 120px 0 175px 50px;
+    background: linear-gradient(
+        to left,
+        rgba(17, 18, 21, 0),
+        rgba(17, 18, 21, 1)
+    ),
+    url('/assets/cover.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: white;
+    width: 100%;
+}
+
+.bottom-gradient {
+    height: 100px;
+    width: 100%;
+
+    background: linear-gradient(
+        to top,
+        rgba(17, 18, 21, 1),
+        rgba(17, 18, 21, 0)
+    );
+    margin-top: -100px;
+}
+
+.w-series {
+    display: flex;
+    align-items: center;
+}
+
+.willflix-logo {
+    width: 75px;
+    margin-right: 15px;
+}
+
+.series {
+    font-size: 18px;
+    letter-spacing: 2px;
+}
+
+.series-title {
+    font-family: Benguiat;
+    font-size: 75px;
+    padding-top: 15px;
+    padding-bottom: 30px;
+    line-height: 80px;
+}
