fill out tags section

--- a/src/app/feature-pages/coding/cheese/cheese.component.html
+++ b/src/app/feature-pages/coding/cheese/cheese.component.html
@@ -8,6 +8,28 @@
                     <div class="series">SERIES</div>
                 </div>
                 <div class="series-title">Cheese App</div>
+                <div class="info-bar">
+                    <div class="date">2019-2021</div>
+                    <div class="episodes">3 Episodes</div>
+                    <div class="tools">
+                        <div class="tag swift">
+                            <img class="tag-icon" src="/assets/tags/swift.png"/>
+                            <div class="tag-text">Swift</div>
+                        </div>
+                        <div class="tag python">
+                            <img class="tag-icon" src="/assets/tags/python.png"/>
+                            <div class="tag-text">Python</div>
+                        </div>
+                        <div class="tag obj-c">
+                            <img class="tag-icon" src="/assets/tags/obj-c.png"/>
+                            <div class="tag-text">Obj-C</div>
+                        </div>
+                        <div class="tag cv">
+                            <img class="tag-icon" src="/assets/tags/open-cv.png"/>
+                            <div class="tag-text">CV</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="bottom-gradient"></div>
