--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,19 @@ html, body {
     font-family: "Benguiat";
     src: local("Benguiat"), url(./assets/fonts/Benguiat-Bold.ttf) format("truetype");
 }
+
+.swift {
+    background: #F7522A;  
+}
+
+.python {
+    background: #3374A8;
+}
+
+.obj-c {
+    background: black;
+}
+
+.cv {
+    background: #0002F8;
+}
