--- a/src/app/feature-pages/coding/cheese/cheese.component.scss
+++ b/src/app/feature-pages/coding/cheese/cheese.component.scss
@@ -34,6 +34,11 @@
     margin-top: -100px;
 }
 
+.main-text-wrap {
+    width: 75%;
+    max-width: 620px;
+}
+
 .w-series {
     display: flex;
     align-items: center;
@@ -53,6 +58,43 @@
     font-family: Benguiat;
     font-size: 75px;
     padding-top: 15px;
-    padding-bottom: 30px;
+    padding-bottom: 15px;
     line-height: 80px;
+}
+
+.info-bar {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.date {
+    margin-top: 10px;
+    margin-right: 20px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    background: rgb(66, 66, 66);
+}
+
+.episodes {
+    margin-top: 10px;
+    margin-right: 20px;
+}
+
+.tools {
+    margin-top: 10px;
+    display: flex;
+}
+
+.tag {
+    padding: 5px 10px 5px 8px;
+    border-radius: 5px;
+    margin-right: 15px;
+    display: flex;
+    align-items: center;
+}
+
+.tag-icon {
+    width: 18px;
+    margin-right: 7px;
 }
