cheese app section improvements

--- a/src/app/feature-pages/coding/cheese/cheese.component.html
+++ b/src/app/feature-pages/coding/cheese/cheese.component.html
@@ -5,7 +5,7 @@
             <div class="main-text-wrap">
                 <div class="w-series">
                     <img class="willflix-logo" src="/assets/willflix.png"/>
-                    <div class="series">SERIES</div>
+                    <div class="series">FILM</div>
                 </div>
                 <div class="series-title">Cheese App</div>
                 <div class="info-bar">
@@ -29,6 +29,14 @@
                             <div class="tag-text">CV</div>
                         </div>
                     </div>
+                </div>
+                <div class="episode-title">Episode 1: Middlebury Entrepreneurs Class</div>
+                <div class="episode-description">
+                    The "Cheese App," originally titled "Stitch," is an attempt to solve the group photo dilemma.
+                </div>
+                <div class="play-button">
+                    <div class="play"></div>
+                    Play
                 </div>
             </div>
         </div>
