--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
                 <div class="main-description">In this adorkable "rags to rags" story, a clueless junior at Middlebury College (on the dual degree track with Columbia University Engineering) does everything he can to secure jobs and internships with his B.A. in film and B.S. in computer science. Little does he know, he's going to end up in his parents' basement after graduation...</div>
             </div>
             <div class="buttons-wrapper">
-                <div class="intro-button">
+                <div class="play-button">
                     <div class="play"></div>
                     Play
                 </div>
