--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -43,7 +43,7 @@
     margin-top: 25px;
 }
 
-.intro-button {
+.play-button {
     display: flex;
     padding: 10px 10px 10px 32px;
     background: white;
