--- a/src/app/feature-pages/coding/cheese/cheese.component.scss
+++ b/src/app/feature-pages/coding/cheese/cheese.component.scss
@@ -36,7 +36,7 @@
 
 .main-text-wrap {
     width: 75%;
-    max-width: 620px;
+    max-width: 550px;
 }
 
 .w-series {
@@ -70,7 +70,7 @@
 
 .date {
     margin-top: 10px;
-    margin-right: 20px;
+    margin-right: 15px;
     padding: 5px 10px;
     border-radius: 5px;
     background: rgb(66, 66, 66);
@@ -79,11 +79,12 @@
 .episodes {
     margin-top: 10px;
     margin-right: 20px;
+    display: none;
 }
 
 .tools {
-    margin-top: 10px;
     display: flex;
+    flex-wrap: wrap;
 }
 
 .tag {
@@ -92,9 +93,62 @@
     margin-right: 15px;
     display: flex;
     align-items: center;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+    margin-top: 10px;
+
+    &:hover {
+        box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.3);
+        margin-bottom: 3px;
+        margin-top: 7px;
+    }
 }
 
 .tag-icon {
     width: 18px;
     margin-right: 7px;
+}
+
+.tag-text {
+    white-space: nowrap;
+}
+
+.episode-title {
+    margin-top: 40px;
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.episode-description {
+    margin-top: 15px;
+    font-size: 19px;
+    opacity: 0.8;
+}
+
+.play-button {
+    margin-top: 30px;
+    display: flex;
+    padding: 10px 10px 10px 32px;
+    background: white;
+    border-radius: 6px;
+    width: 100px;
+    color: rgb(17, 18, 21);
+    font-weight: bold;
+    font-size: 20px;
+    align-items: center;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+
+    &:hover {
+        opacity: 0.9;
+    }
+}
+
+.play {
+	width: 0;
+	height: 0;
+	border-top: 10px solid transparent;
+	border-left: 18px solid rgb(17, 18, 21);
+	border-bottom: 10px solid transparent;
+    margin-right: 15px;
 }
