--- a/src/app/feature-pages/coding/cheese/cheese.component.scss
+++ b/src/app/feature-pages/coding/cheese/cheese.component.scss
@@ -9,13 +9,13 @@
 }
 
 .section-one {
-    padding: 120px 0 175px 50px;
+    padding: 120px 0 175px 65px;
     background: linear-gradient(
         to left,
         rgba(17, 18, 21, 0),
         rgba(17, 18, 21, 1)
     ),
-    url('/assets/cover.jpg');
+    url('/assets/covers/cheese-cover.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     color: white;
@@ -151,4 +151,24 @@
 	border-left: 18px solid rgb(17, 18, 21);
 	border-bottom: 10px solid transparent;
     margin-right: 15px;
+}
+
+.link {
+    text-decoration: none;
+}
+
+.section-two {
+    padding-left: 65px;
+    margin-top: -160px;
+}
+
+.features-text {
+    padding-top: 80px;
+    color: white;
+    font-size: 20px;
+    padding-bottom: 10px;
+}
+
+.features-wrapper {
+    display: flex;
 }
