--- a/src/app/components/feature/feature.component.html
+++ b/src/app/components/feature/feature.component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="['/cheese']">
+<a [routerLink]="[link]">
     <div class="feature-wrap" [ngStyle]="{ 'background' : 'url(' + image + ')', 'background-size' : 'cover', 'background-position' : 'center' }">
         <img class="w-logo" src="/assets/w-logo.png"/>
     </div>
