--- a/src/app/feature-pages/coding/cheese/cheese.component.scss
+++ b/src/app/feature-pages/coding/cheese/cheese.component.scss
@@ -27,6 +27,17 @@
 
     @media (max-width: 510px) {
         padding: 120px 0 175px 30px;
+        margin-top: -95px;
+        background: linear-gradient(
+        to left,
+        rgba(17, 18, 21, 0.3),
+        rgba(17, 18, 21, 1)
+    ),
+    url('/assets/covers/cheese-cover.jpg');
+    }
+
+    @media (max-width: 422px) {
+        margin-top: -140px !important;
     }
 }
 
@@ -50,6 +61,10 @@
 .w-series {
     display: flex;
     align-items: center;
+
+    @media (max-width: 510px) {
+        margin-top: 100px;
+    }
 }
 
 .willflix-logo {
@@ -175,7 +190,7 @@
     margin-top: -160px;
 
     @media (max-width: 510px) {
-        padding: 120px 0 175px 30px;
+        padding: 0 0 175px 30px;
     }
 }
 
