--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,6 +2,10 @@
     background: rgb(17, 18, 21);
     display: flex;
     min-height: 100vh;
+
+    @media (max-width: 510px) {
+        flex-direction: column;
+    }
 }
 
 .main-right {
@@ -19,6 +23,21 @@
     background-size: cover;
     background-repeat: no-repeat;
     color: white;
+
+    @media (max-width: 510px) {
+        padding: 120px 0 175px 30px;
+        margin-top: -95px;
+        background: linear-gradient(
+        to left,
+        rgba(17, 18, 21, 0.4),
+        rgba(17, 18, 21, 1)
+    ),
+    url('/assets/covers/cheese-cover.jpg');
+    }
+
+    @media (max-width: 422px) {
+        margin-top: -140px !important;
+    }
 }
 
 .main-text-wrap {
@@ -31,6 +50,12 @@
     font-size: 75px;
     padding-bottom: 30px;
     line-height: 80px;
+
+    @media (max-width: 510px) {
+        margin-top: 100px;
+        font-size: 50px;
+        line-height: 53px;
+    }
 }
 
 .main-description {
@@ -104,6 +129,10 @@
 .section-two {
     padding-left: 65px;
     margin-top: -160px;
+
+    @media (max-width: 510px) {
+        padding: 0 0 10px 30px;
+    }
 }
 
 .trending-text {
@@ -121,6 +150,10 @@
 .section-x {
     padding-left: 65px;
     margin-top: -32px;
+
+    @media (max-width: 510px) {
+        padding: 0 0 10px 30px;
+    }
 }
 
 .bottom-gradient {
