--- a/src/app/feature-pages/coding/catan/catan.component.html
+++ b/src/app/feature-pages/coding/catan/catan.component.html
@@ -1,5 +1,5 @@
 <div class="parent">
-    <app-nav></app-nav>
+    <app-nav class="nav"></app-nav>
     <div class="main-right">
         <div class="section-one">
             <div class="main-text-wrap">
