set up routing to code section pages

--- a/src/app/feature-pages/coding/magic-binder/magic-binder.component.html
+++ b/src/app/feature-pages/coding/magic-binder/magic-binder.component.html
@@ -7,7 +7,7 @@
                     <img class="willflix-logo" src="/assets/willflix.png"/>
                     <div class="series">FILM</div>
                 </div>
-                <div class="series-title">Cheese App</div>
+                <div class="series-title">Magic Binder Web</div>
                 <div class="info-bar">
                     <div class="date">2019-2021</div>
                     <div class="episodes">3 Episodes</div>
