--- a/src/app/feature-pages/coding/magic-binder/magic-binder.component.html
+++ b/src/app/feature-pages/coding/magic-binder/magic-binder.component.html
@@ -9,33 +9,30 @@
                 </div>
                 <div class="series-title">Magic Binder Web</div>
                 <div class="info-bar">
-                    <div class="date">2019-2021</div>
-                    <div class="episodes">3 Episodes</div>
+                    <div class="date">2021</div>
+                    <div class="episodes">5 Episodes</div>
                     <div class="tools">
                         <div class="tag swift">
-                            <img class="tag-icon" src="/assets/tags/swift.png"/>
-                            <div class="tag-text">Swift</div>
+                            <img class="tag-icon" src="/assets/tags/angular.png"/>
+                            <div class="tag-text">Angular</div>
                         </div>
                         <div class="tag python">
-                            <img class="tag-icon" src="/assets/tags/python.png"/>
-                            <div class="tag-text">Python</div>
+                            <img class="tag-icon" src="/assets/tags/node-js.png"/>
+                            <div class="tag-text">Node.js</div>
                         </div>
                         <div class="tag obj-c">
-                            <img class="tag-icon" src="/assets/tags/obj-c.png"/>
-                            <div class="tag-text">Obj-C</div>
+                            <img class="tag-icon" src="/assets/tags/fullstack.png"/>
+                            <div class="tag-text">Full-Stack</div>
                         </div>
                         <div class="tag cv">
-                            <img class="tag-icon" src="/assets/tags/open-cv.png"/>
-                            <div class="tag-text">CV</div>
+                            <img class="tag-icon" src="/assets/tags/aws.png"/>
+                            <div class="tag-text">AWS</div>
                         </div>
                     </div>
                 </div>
                 <div class="episode-title">Episode 1: Pilot</div>
                 <div class="episode-description">
-                    It's difficult to take a group photo where no one looks bad, and almost 
-                    impossible to take one where everyone looks their best. The "Cheese App"
-                    (previously titled "Stitch") fixes this by letting users choose their favorite
-                    take for each individual, and "stitching" them together in one optimal frame.
+                    While I can’t share much about the product at this time, Magic Binder was the first production environment I got to contribute to. I built components from scratch and fixed bugs on the frontend, and wrote queries and services (using Akita for reactive state management) on the backend.
                 </div>
                 <a class="link" href="https://www.google.com" target="_blank">
                     <div class="play-button">
