change tags, integrate initial binder links

--- a/src/app/feature-pages/coding/magic-binder/magic-binder.component.html
+++ b/src/app/feature-pages/coding/magic-binder/magic-binder.component.html
@@ -12,19 +12,19 @@
                     <div class="date">2021</div>
                     <div class="episodes">5 Episodes</div>
                     <div class="tools">
-                        <div class="tag swift">
+                        <div class="tag angular">
                             <img class="tag-icon" src="/assets/tags/angular.png"/>
                             <div class="tag-text">Angular</div>
                         </div>
-                        <div class="tag python">
+                        <div class="tag node">
                             <img class="tag-icon" src="/assets/tags/node-js.png"/>
                             <div class="tag-text">Node.js</div>
                         </div>
-                        <div class="tag obj-c">
+                        <div class="tag fullstack">
                             <img class="tag-icon" src="/assets/tags/fullstack.png"/>
                             <div class="tag-text">Full-Stack</div>
                         </div>
-                        <div class="tag cv">
+                        <div class="tag aws">
                             <img class="tag-icon" src="/assets/tags/aws.png"/>
                             <div class="tag-text">AWS</div>
                         </div>
@@ -34,7 +34,7 @@
                 <div class="episode-description">
                     While I can’t share much about the product at this time, Magic Binder was the first production environment I got to contribute to. I built components from scratch and fixed bugs on the frontend, and wrote queries and services (using Akita for reactive state management) on the backend.
                 </div>
-                <a class="link" href="https://www.google.com" target="_blank">
+                <a class="link" href="https://app.magicbinder.com" target="_blank">
                     <div class="play-button">
                         <div class="play"></div>
                         Play
