--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,3 +25,19 @@ html, body {
 .cv {
     background: #0002F8;
 }
+
+.aws {
+    background: black;
+}
+
+.angular {
+    background: #a6120d;
+}
+
+.node {
+    background: #3c873a;
+}
+
+.fullstack {
+    background: rgb(99, 99, 255);
+}
