--- a/src/app/feature-pages/coding/prod-ind/prod-ind.component.html
+++ b/src/app/feature-pages/coding/prod-ind/prod-ind.component.html
@@ -32,12 +32,10 @@
                 </div>
                 <div class="episode-title">Episode 1: Pilot</div>
                 <div class="episode-description">
-                    It's difficult to take a group photo where no one looks bad, and almost 
-                    impossible to take one where everyone looks their best. The "Cheese App"
-                    (previously titled "Stitch") fixes this by letting users choose their favorite
-                    take for each individual, and "stitching" them together in one optimal frame.
+                    Productivity Industries is the parent company for Magic Binder (and a few other exciting products on the way).
+                    Our mission is to enable working professionals to automate trivial tasks. I built and designed the company website, linked below.
                 </div>
-                <a class="link" href="https://www.google.com" target="_blank">
+                <a class="link" href="https://productivityindustries.com/" target="_blank">
                     <div class="play-button">
                         <div class="play"></div>
                         Play
